--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    animation: animate-gradient 3s ease infinite;
+    
+  }
 .contact-list{
     background: rgba(247, 245, 244, 1);
-
 }
 
 .scrollbar-hidden::-webkit-scrollbar {
